Some local changes for testing HCS TPS
Just for a record purpose, do NOT merge to develop branch.

Signed-off-by: ljianghedera <leo.jiang@hedera.com>